--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@
 
 /*===== Colores =====*/
 :root{
-  --first-color:  #b36eda;
-  --second-color: #0E2431;
+  --first-color: #48072e;
+  --second-color: #196798;
 }
 
 /*===== Fuente y tipografia =====*/
@@ -77,7 +77,7 @@ img{
   display: block;
 }
 .l-main{
-  background-color: #051522;
+  background-color: #010c15;
 }
 /*===== CLASS CSS ===== */
 .section-title{
@@ -121,7 +121,7 @@ img{
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color:   #1d2b41;
+  background-color: #48072e;
   box-shadow: 0 1px 4px rgba(146,161,176,.15);
 }
 
@@ -170,7 +170,7 @@ img{
 
 }
 .nav__item a:hover{
-  color:  #b36eda;
+  color:  #ea0d92;
   transition: .5 ease;
 
 }
